--- a/SuperCaculator/PaintForm/FunctionPaintForm.csproj
+++ b/SuperCaculator/PaintForm/FunctionPaintForm.csproj
@@ -88,5 +88,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Function\Function.csproj">
+      <Project>{67D272CD-ED3E-41B3-96D3-A9F2FA133F01}</Project>
+      <Name>Function</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
