--- a/SuperCaculator/PaintForm/FunctionPaintForm.csproj
+++ b/SuperCaculator/PaintForm/FunctionPaintForm.csproj
@@ -46,25 +46,43 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FunctionPaintForm.cs">
+    <Compile Include="FunctionPaint2DForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FunctionPaintForm.designer.cs">
-      <DependentUpon>FunctionPaintForm.cs</DependentUpon>
+    <Compile Include="FunctionPaint2DForm.designer.cs">
+      <DependentUpon>FunctionPaint2DForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="PaintForm.cs">
+    <Compile Include="FunctionPaint3DForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PaintForm.designer.cs">
-      <DependentUpon>PaintForm.cs</DependentUpon>
+    <Compile Include="FunctionPaint3DForm.Designer.cs">
+      <DependentUpon>FunctionPaint3DForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Paint3DForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Paint3DForm.Designer.cs">
+      <DependentUpon>Paint3DForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Paint2DForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Paint2DForm.designer.cs">
+      <DependentUpon>Paint2DForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="FunctionPaintForm.resx">
-      <DependentUpon>FunctionPaintForm.cs</DependentUpon>
+    <EmbeddedResource Include="FunctionPaint2DForm.resx">
+      <DependentUpon>FunctionPaint2DForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="PaintForm.resx">
-      <DependentUpon>PaintForm.cs</DependentUpon>
+    <EmbeddedResource Include="FunctionPaint3DForm.resx">
+      <DependentUpon>FunctionPaint3DForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Paint3DForm.resx">
+      <DependentUpon>Paint3DForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Paint2DForm.resx">
+      <DependentUpon>Paint2DForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
