--- a/SuperCaculator/PaintForm/FunctionPaintForm.csproj
+++ b/SuperCaculator/PaintForm/FunctionPaintForm.csproj
@@ -46,17 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FunctionPaint2DForm.cs">
+    <Compile Include="FunctionPaintForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FunctionPaint2DForm.designer.cs">
-      <DependentUpon>FunctionPaint2DForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FunctionPaint3DForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FunctionPaint3DForm.Designer.cs">
-      <DependentUpon>FunctionPaint3DForm.cs</DependentUpon>
+    <Compile Include="FunctionPaintForm.Designer.cs">
+      <DependentUpon>FunctionPaintForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Paint3DForm.cs">
       <SubType>Form</SubType>
@@ -72,11 +66,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="FunctionPaint2DForm.resx">
-      <DependentUpon>FunctionPaint2DForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FunctionPaint3DForm.resx">
-      <DependentUpon>FunctionPaint3DForm.cs</DependentUpon>
+    <EmbeddedResource Include="FunctionPaintForm.resx">
+      <DependentUpon>FunctionPaintForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Paint3DForm.resx">
       <DependentUpon>Paint3DForm.cs</DependentUpon>
