--- a/SuperCaculator/MatrixCalculateForm/MatrixCalculateForm.csproj
+++ b/SuperCaculator/MatrixCalculateForm/MatrixCalculateForm.csproj
@@ -46,19 +46,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="MainMatrixForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainMatrixForm.Designer.cs">
+      <DependentUpon>MainMatrixForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Matrix.cs" />
+    <Compile Include="MatrixEvjForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MatrixEvjForm.Designer.cs">
+      <DependentUpon>MatrixEvjForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MatrixReadAndCheck.cs" />
     <Compile Include="MatrixCreate.cs" />
     <Compile Include="OneMatrix.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TwoMatrix.cs" />
+    <EmbeddedResource Include="MainMatrixForm.resx">
+      <DependentUpon>MainMatrixForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MatrixEvjForm.resx">
+      <DependentUpon>MatrixEvjForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
