修改了处理算式末尾类所在项目的框架

--- a/SuperCaculator/HandleEqua/HandleEqua.csproj
+++ b/SuperCaculator/HandleEqua/HandleEqua.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{993E55FD-3782-4DCA-9B11-09459234FEF2}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
-    <RootNamespace>StandardCalculateForm</RootNamespace>
-    <AssemblyName>StandardCalculateForm</AssemblyName>
+    <ProjectGuid>{4123FA5E-3CAC-416B-9668-BD4CE077AA4E}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>HandleEqua</RootNamespace>
+    <AssemblyName>HandleEqua</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -39,55 +39,16 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="StandardForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="StandardForm.Designer.cs">
-      <DependentUpon>StandardForm.cs</DependentUpon>
-    </Compile>
+    <Compile Include="HandleEquation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="StandardForm.resx">
-      <DependentUpon>StandardForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Function\Function.csproj">
-      <Project>{67d272cd-ed3e-41b3-96d3-a9f2fa133f01}</Project>
-      <Name>Function</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\HandleEqua\HandleEqua.csproj">
-      <Project>{4123fa5e-3cac-416b-9668-bd4ce077aa4e}</Project>
-      <Name>HandleEqua</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
