增加log y(x)按钮的代码，添加logbase的数据绑定

--- a/SuperCaculator/StandardCalculateForm/StandardCalculateForm.csproj
+++ b/SuperCaculator/StandardCalculateForm/StandardCalculateForm.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Log.cs" />
     <Compile Include="SetLogBase.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,8 +76,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="Properties\DataSources\SomeLog.datasource" />
-    <None Include="Properties\DataSources\StandardCalculat.datasource" />
+    <None Include="Properties\DataSources\Log.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
