--- a/SuperCaculator/UnitConversion/UnitConversion.csproj
+++ b/SuperCaculator/UnitConversion/UnitConversion.csproj
@@ -62,19 +62,19 @@
     <Compile Include="ExchangeRate.Designer.cs">
       <DependentUpon>ExchangeRate.cs</DependentUpon>
     </Compile>
-    <Compile Include="UnitConversion.cs">
+    <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UnitConversion.Designer.cs">
-      <DependentUpon>UnitConversion.cs</DependentUpon>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ExchangeRate.resx">
       <DependentUpon>ExchangeRate.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UnitConversion.resx">
-      <DependentUpon>UnitConversion.cs</DependentUpon>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
